
<resources>
    <string name="app_name">WeatherBD</string>
    <string name="settings">Settings</string>
    <string name="loc_summery">Set Your Current Location</string>
    <string name="loc_title">Location</string>
    <string name="loc_key">loc</string>
    <string name="unit_title">Units for Weather</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="unit_key">unit</string>
    <string name="layout_val_null">null</string>
    <string name="layout_title_humidity">Humidity</string>
    <string name="layout_title_pressure">Pressure</string>
    <string name="layout_title_visi">Visibility</string>
    <string name="layout_title_winspeed">Wind Speed</string>
    <string name="layout_title_refresh">Refresh</string>
    <string name="layout_val_description">Settings Icon</string>
</resources>